--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,6 +30,9 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
+      - name: Get required packages
+        run: | 
+              sudo bundle install
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -37,9 +40,6 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
-      - name: Get required packages.
-        run: | 
-              gem install jekyll-linktree
 
   # Deployment job
   deploy:
