--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,6 +32,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Get required packages
         run: | 
+              sudo gem install bundler
               sudo bundle install
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
