--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -32,8 +32,7 @@ jobs:
         uses: actions/configure-pages@v5
       - name: Get required packages
         run: | 
-              sudo gem install bundler
-              sudo bundle install
+              sudo gem install jekyll-linktree
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
