--- a/.github/workflows/jekyll-gh-pages.yml
+++ b/.github/workflows/jekyll-gh-pages.yml
@@ -30,9 +30,6 @@ jobs:
         uses: actions/checkout@v4
       - name: Setup Pages
         uses: actions/configure-pages@v5
-      - name: Get required packages
-        run: | 
-              sudo gem install jekyll-linktree
       - name: Build with Jekyll
         uses: actions/jekyll-build-pages@v1
         with:
@@ -40,6 +37,11 @@ jobs:
           destination: ./_site
       - name: Upload artifact
         uses: actions/upload-pages-artifact@v3
+      - name: Get required packages
+        run: | 
+              sudo gem install bundler
+              sudo bundle install
+
 
   # Deployment job
   deploy:
